--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "converter": "nodemon rtspConverter.js",
     "server": "nodemon hlsServer.js",
-    "clean": "nodemon cleaner.js",
+    "cleaner": "nodemon cleaner.js",
+    "index": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Robin J",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "find-remove": "^3.1.0"
+    "find-remove": "^3.1.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
